--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       </div>
     </div>
 
-    <main id="main-content" style="flex: 0 0 60%; overflow: auto; padding: 0 20% 0 30px;">
+    <main class={{ page.class }} id="main-content" style="flex: 0 0 60%; overflow: auto; padding: 0 20% 0 30px;">
       <!-- Gov banner BEGIN -->
       <div id="top" class="usa-banner" style="background-color: white; padding-top: 20px;">
         <header class="usa-banner-header">
