--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>HMDA Platform API</title>
+  <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{ "/css/styles.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/css/pygments.css" | relative_url }}">
 </head>
