--- a/_sass/api.scss
+++ b/_sass/api.scss
@@ -1,71 +1,12 @@
 body,
-html, main, aside {
+html,
+main,
+aside {
   height: 100%;
 }
 
-.usa-sidenav-list>li {
-  border-top: none;
-}
-.usa-sidenav-list a {
-  &:hover {
-    background-color: transparent;
-  }
-  &.usa-current {
-    border: none;
-    padding-left: 1.8rem;
-  }
-}
-.usa-section {
-  padding: 65px 0;
-}
-.usa-sidenav-list {
-  margin-top: 2em;
-}
-.usa-banner-inner {
-  padding: 0;
-}
-.usa-footer-primary-section {
-  background-color: #fff;
-}
-aside {
-  ul {
-    list-style: none;
-    padding: 0;
-    li {
-      font-weight: 700;
-    }
-    ul {
-      margin-top: 0;
-      padding-left: 1em;
-      li {
-        font-weight: normal;
-      }
-    }
-  }
-}
-.usa-header {
-  background-color: #fff;
-  position: fixed;
-}
-.usa-grid {
-  max-width: 100%;
-}
-.usa-nav-container {
-  max-width: 100%;
-}
-@media screen and (min-width: 951px) {
-  .usa-navbar {
-    height: 4rem;
-  }
-  .usa-nav {
-    padding-top: 0;
-  }
-  .usa-nav-primary>li>a {
-    padding-bottom: 1.3rem;
-  }
-}
 body {
-  font-size: 1.4em;
+  font-size: 1.5em;
 }
 
 h1 {
@@ -91,60 +32,36 @@ hgroup {
   }
 }
 
-table {
-  margin-top: 0;
-}
-
-.usa-content p:not(.usa-font-lead),
-.usa-content ul:not(.usa-accordion):not(.usa-accordion-bordered),
-.usa-content ol:not(.usa-accordion):not(.usa-accordion-bordered) {
-  max-width: 100%;
-}
 hr {
-  display: block;
-  height: 1px;
   border: 0;
   border-top: 1px solid #d6d7d9;
+  display: block;
+  height: 1px;
   margin: 1em 0;
   padding: 0;
 }
 
-pre,
-code {
-  background-color: #fafafb;
-  border: 1px solid #cacaca;
-  color: #393939;
-  font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier,
-    monospace;
-  font-size: 12px;
+table {
+  margin-top: 0;
 }
 
-pre {
-  border-radius: 3px;
-  padding: 1em;
-
-  code {
-    background-color: transparent;
-    border: none;
-    border-radius: 0;
+aside {
+  ul {
+    list-style: none;
     padding: 0;
+    li {
+      font-weight: 700;
+    }
+    ul {
+      margin-top: 0;
+      padding-left: 1em;
+      li {
+        font-weight: normal;
+      }
+    }
   }
 }
 
-code {
-  border-radius: 3px;
-  padding: 3px;
-}
-
-.code-block {
-  position: relative;
-  &>code {
-    background: transparent;
-    border: none;
-    font-size: 0.8em;
-    padding: 0 2px 0 0;
-    position: absolute;
-    right: 0;
-    top: -20px;
-  }
+.margin-bottom-0 {
+  margin-bottom: 0;
 }
