change check digit to uli, clean up content

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -15,6 +15,15 @@
             <li>
               <a href="{{ sub.href | relative_url }}">{{ sub.title }}</a>
             </li>
+            {% if sub.sub %}
+              <ul class="usa-sidenav-sub_list">
+                {% for subsub in sub.sub %}
+                  <li>
+                    <a href="{{ subsub.href | relative_url }}">{{ subsub.title }}</a>
+                  </li>
+                {% endfor %}
+              </ul>
+            {% endif %}
           {% endfor %}
         </ul>
       {% endif %}
