--- a/_sass/api.scss
+++ b/_sass/api.scss
@@ -21,14 +21,14 @@ h3 {
 }
 
 hgroup {
-  h3,
-  h4 {
-    margin-top: 0.5em;
+  h1 {
     margin-bottom: 0;
   }
-  h4 {
-    font-size: 1em;
-    font-weight: normal;
+
+  h2,
+  h3,
+  .usa-font-lead {
+    margin: .25em 0;
   }
 }
 
@@ -37,7 +37,7 @@ hr {
   border-top: 1px solid #d6d7d9;
   display: block;
   height: 1px;
-  margin: 1em 0;
+  margin: 2em 0;
   padding: 0;
 }
 
