fix weird link hover movement

--- a/_sass/uswds-overrides.scss
+++ b/_sass/uswds-overrides.scss
@@ -53,11 +53,19 @@
 .usa-sidenav-sub_list {
   a {
     padding-left: 1rem;
+
+    &:hover {
+      padding-left: 1rem;
+    }
   }
 
   .usa-sidenav-sub_list a {
     padding-top: 0;
     padding-left: 2rem;
+
+    &:hover {
+      padding-left: 2rem;
+    }
   }
 }
 
