fix link for logo

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -1,5 +1,5 @@
 <aside>
-  <a href="#" title="Home" aria-label="FFIEC"><img src="{{ "/img/ffiec-logo.png" | relative_url }}" height="25px" alt="FFIEC"></a>
+  <a href="{{ "/" | relative_url }}" title="Home" aria-label="FFIEC"><img src="{{ "/img/ffiec-logo.png" | relative_url }}" height="25px" alt="FFIEC"></a>
 
   <ul class="usa-sidenav-list">
     <li>
