improve readability of code snippets

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -6,6 +6,7 @@ code {
   font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier,
     monospace;
   font-size: 12px;
+  line-height: 1.5em;
 }
 
 pre {
