--- a/_sass/api.scss
+++ b/_sass/api.scss
@@ -21,14 +21,14 @@ h3 {
 }
 
 hgroup {
-  h1 {
+  h1,
+  h4 {
     margin-bottom: 0;
   }
 
-  h2,
-  h3,
-  .usa-font-lead {
-    margin: .25em 0;
+  .usa-font-lead,
+  p {
+    margin-top: 0;
   }
 }
 
